tests/checker/diagnostics/0788_polyvar_conditional_payload_mismatch_03.ml.infer.expected
File "0788_polyvar_conditional_payload_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0788_polyvar_conditional_payload_mismatch_03 is not a valid module name.

File "0788_polyvar_conditional_payload_mismatch_03.ml", line 5, characters 4-30:
5 |     (`A true : [ `A of bool ])
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type [ `A of bool ]
       but an expression was expected of type [ `A of int ]
       Types for tag `A are incompatible
