tests/checker/diagnostics/0788_polyvar_conditional_payload_mismatch_03.ml
let _ =
  if true then
    (`A 2 : [ `A of int ])
  else
    (`A true : [ `A of bool ])
